--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,17 @@
       <artifactId>json-path</artifactId>
       <version>2.9.0</version>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.17.2</version>
+    </dependency>
+
   </dependencies>
 </project>
