--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.17.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.2</version>
+    </dependency>
 
   </dependencies>
   <build>
